syntax = "proto3";

package pb;



//The Test service definition.
service Test {
 rpc SayHello   (SayHelloRequest  ) returns (SayHelloReply  );
 rpc Deleteuser (DeleteuserRequest) returns (DeleteuserReply);
 rpc TestArray  (TestArrayRequest ) returns (TestArrayReply );
}

message SayHelloRequest {
 TestStruc s = 1;
}

message SayHelloReply {
 string rs  = 1;
 string err = 2;
}

message DeleteuserRequest {
 string s = 1;
}

message DeleteuserReply {
 string rs  = 1;
 string err = 2;
}

message TestArrayRequest {
 repeated TestStruc s = 1;
}

message TestArrayReply {
 string rs  = 1;
 string err = 2;
}

message TestStruc {
          string test1 = 1;
          int32  test2 = 3;
          bool   test3 = 4;
 repeated string test4 = 5;
}

